# ollama-provider

./: .gitignore  Cargo.toml  README.md  wasmcloud.toml
example/: Cargo.toml  wadm.yaml  wasmcloud.toml
example/src/: helpers.rs  lib.rs
example/wit/: deps.toml  world.wit
src/: main.rs  ollama.rs
wit/: ollama.wit  provider.wit
