[package]
name = "ollama-provider"
version = "0.1.0"
edition = "2021"
description = """
A capability provider that allows access to the Ollama API
"""

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
futures = "0.3.30"
ollama-rs = "0.1.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
url = "2"
wasmcloud-provider-sdk = "0.4.0"
wit-bindgen-wrpc = "0.3.7"
